--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
-  heading: "Your awesome heading"
-  subheading: "Your awesome subheading"
-  banner: "Your image url"
+  heading: "anyoohu"
+  subheading: "personal blog"
+  banner: "assets\images\banners\myblog.jpg"
