--- a/_data/defaults.yml
+++ b/_data/defaults.yml
@@ -1,4 +1,4 @@
 home:
   heading: "anyoohu"
   subheading: "personal blog"
-  banner: "assets\images\banners\myblog.jpg"
+  banner: "https://anyoohu.github.io"
